--- a/index.html
+++ b/index.html
@@ -12,25 +12,22 @@
     }
   }
   </script>
-  <script type="module">
-    import * as THREE from 'three';
-    import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
-    import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
-    import { ShaderPass } from 'three/addons/postprocessing/ShaderPass.js';
-    import { FilmPass } from 'three/addons/postprocessing/FilmPass.js';
-    window.THREE = THREE;
-    window.EffectComposer = EffectComposer;
-    window.RenderPass = RenderPass;
-    window.ShaderPass = ShaderPass;
-    window.FilmPass = FilmPass;
-  </script>
 </head>
 <body>
+  <!-- Face Transition Overlay -->
+  <div class="face-transition">
+    <object data="jumpscare.svg" type="image/svg+xml"></object>
+  </div>
+
   <!-- Title Screen -->
   <div id="title-screen" class="screen active">
     <div class="title-content">
       <h1>Infinitum</h1>
       <h2>The Haunting of Jafet</h2>
+      <!-- Added Dreadfet face behind title -->
+      <div class="title-face">
+        <object data="jumpscare.svg" type="image/svg+xml"></object>
+      </div>
       <div class="game-modes">
         <button id="start-btn" class="menu-button">
           Start Game
@@ -71,6 +68,10 @@
   <!-- Loading Screen -->
   <div id="loading-screen" class="screen">
     <div class="loading-content">
+      <!-- Added Dreadfet face behind loading text -->
+      <div class="loading-face">
+        <object data="jumpscare.svg" type="image/svg+xml"></object>
+      </div>
       <div class="loading-text">Preparing Your Nightmare...</div>
       <div class="progress-bar">
         <div class="progress"></div>
@@ -95,6 +96,28 @@
         </div>
       </div>
     </div>
+
+    <!-- Stats Container -->
+    <div id="stats-container">
+      <div class="stat-item">
+        <div class="stat-label">Steps Taken</div>
+        <div class="stat-value" id="steps-stat">0</div>
+      </div>
+      <div class="stat-item">
+        <div class="stat-label">Jumpscares</div>
+        <div class="stat-value" id="jumpscares-stat">0</div>
+      </div>
+      <div class="stat-item">
+        <div class="stat-label">Coordinates</div>
+        <div class="stat-value" id="coordinates-stat">X: 0, Z: 0</div>
+      </div>
+    </div>
+
+    <!-- Minimap Container -->
+    <div id="minimap-container">
+      <canvas id="minimap"></canvas>
+    </div>
+
     <div class="interaction-prompt">
       Press E to interact
     </div>
@@ -121,7 +144,12 @@
   <div id="fear-overlay" class="overlay fear-overlay"></div>
   <div id="eeriness-overlay" class="overlay eeriness-overlay"></div>
 
+  <!-- Dream Effects -->
+  <div class="dream-transition"></div>
+  <div class="dream-overlay"></div>
+
   <!-- Scripts -->
+  <script async src="https://unpkg.com/es-module-shims"></script>
   <script type="module" src="game.js"></script>
 </body>
 </html>
